# diwakerg.github.io

./: .buildinfo  .gitignore  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  pyproject.toml  search.html  searchindex.js
notebooks/: _config.yml
