[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Diwaker Ghimire <dwkrghm@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^0.15.1"
jupyterlab = "^3.6.3"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
statsmodels = "^0.13.5"
ghp-import = "^2.1.0"


#[tool.poetry.scripts]
#ghp_push = "ghp_import -n -p -f notebooks/_build/html"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
